# EmbeddedMontiArc

./: .codeclimate.yml  .directory  .dockerignore  .env  .env.dev  .env.development  .env.production  .gitattributes  .gitignore  .gitlab-ci copy.yml  .gitlab-ci.yml  .gitlab-ci.yml.swp  .gitlab.ci.yml  .gitlab.yml  .gitmodules  .main.yml  .npmrc  .npmrc.pipeline  .pom.xml.swp  .project  .travis.yml  .vscodeignore  3rdpartylicenses.txt  AllTests.java  AutoML.md  BuilderDockerfile  CI-setup.md  CLI.py  CMakeLists.txt  Clustering Algorithms.docx  Commons2.mc4  ComposedNetworks  Config.py  Dockerfile  HowToInstall.md  INSTALL_DEPENDENCIES.md  JeninsBackup.md  Math.mc4  Pix2PixGen.emadl  PytorchDocker  (+162 more)
.test/: build.sh
ROSInterface/: CMakeLists.txt  README.MD
ROSInterface/src/: ROSInterface.cpp
build_environment/network_example/: CMakeLists.txt
build_environment/network_example/src/: autopilot.h  ddc_mode.cpp  program_adapter.cpp
build_environment/sample_autopilot/: CMakeLists.txt
build_environment/sample_autopilot/src/: autopilot.cpp  autopilot.h  ddc_mode.h  program_adapter.cpp  program_adapter.h
docker/example/: CMakeLists.txt
docker/example/src/: client-example.cpp  service-example.cpp
docker/someip_adapter/: CMakeLists.txt  SomeipAdapter_tests_a_compA.cpp  SomeipAdapter_tests_a_compA.h
docs/unicorn-extension/: CMakeLists.txt
docs/unicorn-extension/qemu/: CMakeLists.txt
fashionmediumseg/src/cpp/: CMakeLists.txt  FashionSegment.cpp
fcn/src/cpp/: CMakeLists.txt  DemoSemSeg.cpp  DigitCalculator.cpp
gluon/src/cpp/: CMakeLists.txt  DigitCalculator.cpp  DigitGenerator.cpp  MNISTGenerator.cpp
hardware_emulator/: CMakeLists.txt  README.md  build_deploy.bat  build_release.bat
hardware_emulator/include/hardware-emulator/: autopilot_interface.h  debug.h  dll_interface.h  instruction_time.h  method_calling.h  tests.h  utility.h
hardware_emulator/libs/Debug/: Zydis.lib  pe-parser-library.lib  unicorn.lib
hardware_emulator/libs/Release/: Zydis.lib  pe-parser-library.lib  unicorn.lib  x86_64-softmmu.lib
hardware_emulator/libs/vs/: Zydis.lib  pe-parser-library.lib  unicorn.lib  x86_64-softmmu.lib
hardware_emulator/src/: autopilot_interface.cpp  config.cpp  config.h  de_rwth_monticore_EmbeddedMontiArc_simulators_hardware_emulator_CppBridge.h  debug.cpp  debug.h  direct_software_simulator.cpp  direct_software_simulator.h  dll_interface.cpp  dll_interface.h  hardware_emulator.cpp  hardware_emulator.h  instruction_time.cpp  main.cpp  method_calling.cpp  software_simulator.cpp  software_simulator.h  software_simulator_manager.cpp  software_simulator_manager.h  tests.cpp  tests.h  utility.cpp  utility.h
hardware_emulator/src/autopilot/: autopilot_functions.cpp  autopilot_functions.h  autopilot_inputs.h  autopilot_interface.cpp  autopilot_interface.h  autopilot_outputs.h  autopilot_port_info.h
hardware_emulator/src/computer/: caching.cpp  caching.h  computer.cpp  computer.h  computer_layout.h  function_calling.cpp  function_calling.h  instruction_time.cpp  instruction_time.h  memory.cpp  memory.h  method_calling.h  os.cpp  os.h  registers.cpp  registers.h  symbols.cpp  symbols.h  system_calls.cpp  system_calls.h
hardware_emulator/src/dynamic_interface/: port_info.cpp  port_info.h  resolver.cpp  resolver.h
hardware_emulator/src/emulation/: hardware_emulator.cpp  hardware_emulator.h  instruction_time.h  simulator_integration_HardwareEmulatorInterface.h
hardware_emulator/src/emulator/: HardwareEmulatorInterface.cpp  de_rwth_monticore_EmbeddedMontiArc_simulators_hardware_emulator_HardwareEmulatorInterface.h  emulator_manager.cpp  emulator_manager.h  emulator_server.cpp  emulator_server.h  function_value.cpp  function_value.h  hardware_emulator.cpp  hardware_emulator.h
hardware_emulator/src/interfaces/: autopilot_interface.cpp  autopilot_interface.h  dll_interface.cpp
hardware_emulator/src/jni/: AutopilotAdapter.cpp  jni_emulator.cpp  jni_emulator.h
hardware_emulator/src/lib/: cpp_bridge.cpp  de_rwth_montisim_hardware_emulator_CppBridge.h  jni_interface.cpp  jni_interface.h
hardware_emulator/src/os_linux/: elf.cpp  elf.h  elf_loader.cpp  elf_loader.h  linux_calls.cpp  linux_calls.h  linux_fast_call.h  linux_system_calls.cpp  os_linux.cpp  os_linux.h  so_loader.cpp
hardware_emulator/src/os_windows/: dll_loader.cpp  dll_loader.h  os_windows.cpp  os_windows.h  windows_calls.cpp  windows_calls.h  windows_fast_call.h  windows_system_calls.cpp  windows_system_calls.h
hardware_emulator/src/port/: port.h  port_array.h  port_simple.h
hardware_emulator/src/server/: server.cpp
hardware_emulator/src/simulator/: direct_software_simulator.cpp  direct_software_simulator.h  hardware_emulator.cpp  hardware_emulator.h  software_simulator.cpp  software_simulator.h  (+2 more)
looptest/: CMakeLists.txt  mainOscillation.cpp  mainOscillationAsODESymbol.cpp  mainParallelLoop.cpp  mainSerialLoop.cpp  mainSimpleLoop.cpp
mqtt_demo/: CMakeLists.txt  main.cpp
samples/cppautopilotzigzag/: CMakeLists.txt  autopilot.cpp  autopilot.h  dynamic_interface.cpp  dynamic_interface.h  json.cpp  json.h  library_interface.cpp  make.bat  make.sh  makefile  server_adapter.cpp  server_adapter.h
someip_adapter/: CMakeLists.txt  SomeIPAdapter_tests_a_compA.cpp  SomeIPAdapter_tests_a_compA.h  SomeipAdapter_tests_a_compA.cpp  SomeipAdapter_tests_a_compA.h  tests_a_compA.cpp  tests_a_compA.h
src/cpp/: BallTracking.cpp  CMakeLists.txt  RNNsearch.cpp  Translator.cpp
testmnistvae054/: CMakeLists.txt  CNNAutoencoderTrainer_vae_connector_decoder.py  CNNAutoencoderTrainer_vae_encoder.py  CNNCreator_vae_connector_decoder.py  CNNCreator_vae_encoder.py  CNNDataLoader_vae_connector_decoder.py  CNNGanTrainer_vae_connector_decoder.py  CNNGanTrainer_vae_encoder.py  CNNLAOptimizer_vae_connector_decoder.h  CNNNet_vae_connector_decoder.py  CNNNet_vae_encoder.py  CNNPredictor_vae_connector_decoder.h  CNNSupervisedTrainer_vae_connector_decoder.py  CNNSupervisedTrainer_vae_encoder.py  CNNTrainer_vae_connector_decoder.py  execute_vae_connector_decoder  execute_vae_encoder  vae_connector.h  vae_connector_decoder.h
(+27757 files in other folders)
